# APPBackend

./: .aws  .azure  .bash_history  .bashrc  .gitconfig  .gitignore  .gitignore.swp  .profile  .viminfo  README.md  pyproject.toml
.cache/pip/wheels/2e/ef/25/d63f609da225d551c270ce46904b2458fde78d01245364d9f9/: psycopg2-2.9.2-cp39-cp39-linux_x86_64.whl
.cache/pypoetry/artifacts/99/0b/ae/696e46391a601d6c31d062a296c321cfa94d5b1c1dafd0bef9434752c5/: starlette-0.16.0-py3-none-any.whl
.cache/pypoetry/artifacts/a1/76/cd/34efc294b8ba30b39abea746d40c3a672f9b5d3e058439a338ff92d2be/: httptools-0.2.0-cp39-cp39-manylinux1_x86_64.whl
.docker/: contexts  features.json
.local/share/virtualenv/wheel/3.9/image/1/CopyPipInstall/pip-21.3.1-py3-none-any/pip-21.3.1.dist-info/: RECORD
.ssh/: id_rsa  id_rsa.pub  known_hosts
app/: __init__.py
app/core/: config.py
app/database/: base.py  base_class.py  session.py
app/models/: liquors.py
fastapi-crud/: .gitignore  pyproject.toml
fastapi-crud/alembic/: env.py
fastapi-crud/alembic/versions/: 416d9a263573_create_place_table.py
fastapi-crud/app/: main.py
fastapi-crud/app/api/: api.py  deps.py
fastapi-crud/app/api/endpoints/: liquors.py  products.py
fastapi-crud/app/core/: config.py
fastapi-crud/app/crud/: crud_liquors.py  crud_product.py
fastapi-crud/app/database/: base.py  base_class.py  session.py  sessions.py
fastapi-crud/app/model/: product.py
fastapi-crud/app/models/: liquors.py  product.py
fastapi-crud/app/schema/: product.py
fastapi-crud/app/schemas/: liquors.py
(+2 files in other folders)
