[tool.poetry]
name = "root"
version = "0.1.0"
description = "App comercial- venta de licores"
authors = ["wendyhzo <wendyherazojf@unimagdalena.edu.co>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
